--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -1,17 +1,21 @@
 name: NASA Project CI
+
 on: 
-   push:
-     branches: [ master ]
-    pull_request:
-     branches: [ master ]
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
+
 jobs:
   build:
-  runs-on: ubulntu-latest
-  steps:
-   - uses: actions/checkout@v3
-   - name: Use Node.js Version 20
-   - uses: actions/setup-node@v3
-    with: 
-      node-version: '20'
-  - run: npm install
-  -run: npm run build --prefix client
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      
+      - name: Use Node.js Version 20
+        uses: actions/setup-node@v3
+        with: 
+          node-version: '20'
+          
+      - run: npm install
+      - run: npm run build --prefix client
