--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -18,4 +18,4 @@ jobs:
           node-version: '20'
           
       - run: npm install
-      - run: npm run build --prefix client
+      - run: cd client && npm run build
