--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -17,5 +17,10 @@ jobs:
         with: 
           node-version: '20'
           
-      - run: npm install
-      - run: npm run build --prefix client
+      - name: Install dependencies
+        run: npm install
+        working-directory: ./client
+
+      - name: Build the project
+        run: npm run build
+        working-directory: ./client
