--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -16,6 +16,10 @@ jobs:
         uses: actions/setup-node@v3
         with: 
           node-version: '20'
+
+      - name: Install dependencies
+        run: npm install
+        working-directory: ./server
           
       - name: Install dependencies
         run: npm install
