--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -8,14 +8,19 @@ on:
 
 jobs:
   build:
+    env:
+      CI: true
+    strategy:
+      matrix:
+        node-version: [18.x, 20.x]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       
-      - name: Use Node.js Version 20
+      - name: Use Node.js Version ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with: 
-          node-version: '20'
+          node-version: ${{ matrix.node-version }}
 
       - name: Install dependencies
         run: npm install
