mongo DB in github actions

--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -10,9 +10,11 @@ jobs:
   build:
     env:
       CI: true
+      MONGO_URL: mongodb://localhost/nasa
     strategy:
       matrix:
         node-version: [18.x, 20.x]
+        mongodb-version: ['8.3']
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -21,6 +23,11 @@ jobs:
         uses: actions/setup-node@v3
         with: 
           node-version: ${{ matrix.node-version }}
+
+      - name: Use MongoDB from GitHub actions
+        uses: supercharge/mongodb-github-action@1.6.0
+        with:
+          mongodb-version: ${{ matrix.mongodb-version }}
 
       - name: Install dependencies
         run: npm install
@@ -33,3 +40,5 @@ jobs:
       - name: Build the project
         run: npm run build
         working-directory: ./client
+
+      - run: npm test
