--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.3.4",
+    "morgan": "^1.10.0",
     "pm2": "^5.3.1"
   },
   "devDependencies": {
